# Haskell-Numerical-Optimisation

./: CHANGELOG.md  Haskell-Numerical-Optimisation.cabal  README.md  TestGradientDescent.hs  TestLinearEquationSolver.hs  gradientDescent.hs  linearEquationSolver.hs  newtonOptimisation.hs  vectors.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: Haskell-Numerical-Optimisation-0.1.0.0-inplace.conf  package.cache
src/: GradientDescent.hs  LinearEquationSolver.hs  NewtonOptimisation.hs  OptimisationUtils.hs  VectorsInternal.hs
test/: GradientDescentSpec.hs  LinearEquationSolverSpec.hs  NewtonOptimisationSpec.hs
